Kubernetes/minikube/product_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvc-deployment
spec:
  selector:
    matchLabels:
      app: mvc
  replicas: 2 
  template:
    metadata:
      labels:
        app: mvc
    spec:
      containers:
      - name: mvc
        image: ngbinh14/webapp:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mvc
spec:
  selector:
    app: mvc
  ports:
  - port: 80
    targetPort: 80
    protocol: "TCP"
  type: NodePort
