Kubernetes/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata: 
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec: 
  rules: 
    - host: shiro.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mvc
                port:
                  number: 80
